web/app/themes/sage/resources/styles/blocks/collapse/editor.css
.wp-block-yard-collapse-item {
	&[data-open='true'] {
		--collapse-button-bg-color: var( --collapse-button-bg-color-hover );
		--collapse-button-color: var( --collapse-button-color-hover );
		--collapse-button-icon-bg-color: var(
			--collapse-button-icon-bg-color-hover
		);
		--collapse-button-icon-color: var( --collapse-button-icon-color-hover );
	}
}

.wp-block-yard-collapse-item__header {
	@apply rounded-(--collapse-radius) bg-(--collapse-button-bg-color) px-(--collapse-button-padding-x) py-(--collapse-button-padding-y) leading-(--collapse-button-line-height);
}

.wp-block-yard-collapse-item__header-input {
	@apply resize-none! rounded-none border-none bg-inherit p-0 text-(length:--collapse-button-font-size) leading-(--collapse-button-line-height) font-(--collapse-button-font-weight) text-(--collapse-button-color) shadow-none;
}

.wp-block-yard-collapse-item__header-toggle-button {
	@apply flex aspect-square size-(--collapse-button-icon-size) items-center justify-center rounded-(--collapse-radius)! bg-(--collapse-button-icon-bg-color)! p-0 text-[length:inherit] leading-[inherit] text-(--collapse-button-icon-color)!;
}

.wp-block-yard-collapse .block-editor-block-list__layout {
	@apply grid gap-(--collapse-spacing);
}

